[BE] refactor: 재생기록 관련 로직의 식별 기준을 memberId에서 userUuid로 전환 #746
* [BE] refactor(playinghistory): memberId 기반 식별에서 userUuid 기반으로 전환 #746

* [BE] fix(playinghistory): 비회원도 재생기록을 저장할 수 있도록 수정 #746

- guest일 시 재생기록 저장을 건너뛰는 코드 제거

* [BE] test(playinghistory): memberId에서 userUuid로 테스트 수정 #746

* [BE] fix(memberRepository): findByUuid에서 삭제된 회원은 제외하고 찾도록 수정 #746

* [BE] refactor: 패키지명 userInfo -> userinfo 변경으로 일관성 유지 #746

* [BE] refactor(PlayingHistoryRepository): 메서드명 불일치 문제 수정 #746

- userUuid 매개변수를 받지만 findByMemberIdOrderByUpdatedAtDesc라는 이름으로 명명된 문제 수정

* [BE] test(PlayingHistoryService): 비회원 재생기록 저장 테스트검증 추가 #746

* [BE] test(PlayingHistoryService): 최근 재생기록으로 업데이트 되는지 검증 추가 #746

* [BE] test(PlayingHistoryRepository): 비회원 테스트케이스 추가 #746

* [BE] test(playinghistory): 테스트 안정성을 위해 LocalDateTime.now대신 고정값 사용 #746

* [BE] test(playinghistory): presentation 레이어 테스트에 비회원 로직 변경사항 반영 #746